--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,1 @@
-нужно соединить с css , admin/order.php пустой 
+ипсравить гит название коммитов, логин ошибка с auth.php а должно быть includes/auth.php
