feat: add new func

--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,1 @@
-ипсравить гит название коммитов, логин ошибка с auth.php а должно быть includes/auth.php
+нужно истпавить админку , нужно добавить удаление с корзинки , 
